# initd-tools

./: .gitignore  AUTHORS  Makefile.am  abs2rel.sh  autogen.sh  configure.ac  dep-list.c  dep.c  dep.h  deps.c  deps.h  initd-list.c  initd.c  initd.h  str.c  str.h  strarg.c  tdep.c  tdep2.c  test.c  tstr.c  tstr2.c  tstrarg.c
lib/: Makefile.am  active.c  dep.c  dep.h  initd-installrm.h  initd-list.c  initd-rcint.h  initd-rdep.h  initd-str.h  initd-types.h  initd-util.h  initd.c  initd.h  installrm.c  installrm.h  parse.c  prov.c  prov.h  rcint.h  rdep.c  rdep.h  str.c  str.h  strarg.c  types.h  util.c  util.h
src/: .gitignore  Makefile.am  install_initd.8.in  install_initd.c  remove_initd.8.in  remove_initd.c  util.c  util.h
test/: .gitignore  Makefile.am  deps.c  tactive.c  tadd-deps1.c  tadd-deps2.c  tdep.c  test-script  tinitd-list.c  tinitd.c  tinstall.c  tparse-dir.c  tparse-dir.sh  tparse.c  tparse.sh  trdeps.c  trem-deps.c  tremove.c  tstr.c  tstrarg.c  tverify.c
test/init.d/: bar  barf  dual-headers  foo  mountfs  network
